--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="./styles/responsividade.css">
     <title>Calculadora</title>
 </head>
 <body>
@@ -21,7 +22,7 @@
                     <button onclick="radiciarNumeros()" id="btnRadic">
                         &radic;
                     </button>
-                    <button onclick="potenciarNumeros(numFive, numTwo)" id="btnPotence">
+                    <button onclick="potenciarNumeros()" id="btnPotence">
                         n<sup>n</sup>
                     </button>
                     <button onclick="limparInput()" id="btnClear">
@@ -51,7 +52,7 @@
                     <button onclick="multiplicarNumeros()" id="btnMultiply">
                         x
                     </button>
-                    <button id="btnOne" value="1">
+                    <button id="btnOne" value="1" onclick="">
                         1
                     </button>
                     <button id="btnTwo" value="2">
